[project]
name             = "rest-client"
version          = "0.1.0"
description      = "rest client for testing with log"
readme           = "README.md"
requires-python  = "^3.10"

# указываем директорию с вашим кодом
dynamic = ["dependencies"]
[project.packages]
include = ["restclient"]

[project.dependencies]
httpx           = ">=0.28.1"
curlify2        = ">=2.0.0"
structlog       = ">=25.3.0"
allure-pytest   = ">=2.14.2"
swagger-coverage = { git = "https://github.com/YakushenkoAnton773/swagger-coverage-py.git", rev = "master" }

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
